--- a/apps/open-mob-timer-e2e/project.json
+++ b/apps/open-mob-timer-e2e/project.json
@@ -17,12 +17,18 @@
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["apps/open-mob-timer-e2e/**/*.{js,ts}"]
+        "lintFilePatterns": [
+          "apps/open-mob-timer-e2e/**/*.{js,ts}"
+        ]
       }
     }
   },
   "tags": [],
-  "implicitDependencies": ["open-mob-timer"]
+  "implicitDependencies": [
+    "open-mob-timer"
+  ]
 }
