--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "scripts": {
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
-    "start": "nx serve",
+    "start": "nx run-many --parallel --target=serve --projects=open-mob-timer,api --configuration=dev",
     "build": "nx build",
     "test": "nx test"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.2.0",
+    "@angular/animations": "^13.2.0",
+    "@angular/cdk": "^13.2.0",
     "@angular/common": "~13.2.0",
     "@angular/compiler": "~13.2.0",
     "@angular/core": "~13.2.0",
@@ -19,10 +20,13 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@nebular/eva-icons": "^9.0.0",
+    "@nebular/theme": "^9.0.0",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nrwl/angular": "13.7.1",
+    "eva-icons": "^1.1.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
@@ -47,6 +51,7 @@
     "@nrwl/node": "13.7.1",
     "@nrwl/tao": "13.7.1",
     "@nrwl/workspace": "13.7.1",
+    "@schematics/angular": "~13.2.0",
     "@types/jest": "27.0.2",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "~5.10.0",
