--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
     "projects": {
         "api": "apps/api",
         "api-interfaces": "libs/api-interfaces",
-        "open-mob-timer": "apps/open-mob-timer",
-        "open-mob-timer-e2e": "apps/open-mob-timer-e2e"
+        "open-mob-timer-e2e": "apps/open-mob-timer-e2e",
+        "web": "apps/web"
     }
 }
