--- a/apps/open-mob-timer-e2e/project.json
+++ b/apps/open-mob-timer-e2e/project.json
@@ -7,11 +7,11 @@
             "executor": "@nrwl/cypress:cypress",
             "options": {
                 "cypressConfig": "apps/open-mob-timer-e2e/cypress.json",
-                "devServerTarget": "open-mob-timer:serve:development"
+                "devServerTarget": "web:serve:development"
             },
             "configurations": {
                 "production": {
-                    "devServerTarget": "open-mob-timer:serve:production"
+                    "devServerTarget": "web:serve:production"
                 }
             }
         },
@@ -24,5 +24,5 @@
         }
     },
     "tags": [],
-    "implicitDependencies": ["open-mob-timer"]
+    "implicitDependencies": ["web"]
 }
