--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "open-mob-timer-v2",
-    "version": "0.0.0",
+    "name": "open-mob-timer",
+    "version": "2.0.0",
     "license": "MIT",
     "scripts": {
         "ng": "nx",
         "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
-        "start": "nx run-many --parallel --target=serve --projects=open-mob-timer,api --configuration=dev",
+        "start": "nx run-many --parallel --target=serve --projects=web,api --configuration=dev",
         "build": "nx build",
         "test": "nx test"
     },
@@ -26,6 +26,7 @@
         "@nestjs/core": "^8.0.0",
         "@nestjs/platform-express": "^8.0.0",
         "@nrwl/angular": "13.7.1",
+        "bootstrap": "^5.1.3",
         "eva-icons": "^1.1.3",
         "reflect-metadata": "^0.1.13",
         "rxjs": "~7.4.0",
