Re-Architect for Enterprise

--- a/angular.json
+++ b/angular.json
@@ -3,6 +3,7 @@
     "projects": {
         "api": "apps/api",
         "web": "apps/web",
+        "web-feature-create-mob": "libs/web/feature/create-mob",
         "web-feature-home": "libs/web/feature/home"
     }
 }
