--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,8 @@
         "skipDefaultLibCheck": true,
         "baseUrl": ".",
         "paths": {
-            "@omt/web-feature-home": ["libs/web/feature/home/src/index.ts"]
+            "@omt/web-feature-home": ["libs/web/feature/home/src/index.ts"],
+            "@omt/web/feature/create-mob": ["libs/web/feature/create-mob/src/index.ts"]
         }
     },
     "exclude": ["node_modules", "tmp"]
