--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
         "@nestjs/common": "^8.0.0",
         "@nestjs/core": "^8.0.0",
         "@nestjs/platform-express": "^8.0.0",
+        "@nestjs/typeorm": "^8.0.3",
         "@nrwl/angular": "13.7.1",
         "bootstrap": "^5.1.3",
         "eva-icons": "^1.1.3",
+        "pg": "^8.7.1",
         "reflect-metadata": "^0.1.13",
         "rxjs": "~7.4.0",
         "tslib": "^2.0.0",
+        "typeorm": "^0.2.41",
         "zone.js": "~0.11.4"
     },
     "devDependencies": {
