--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,8 +15,9 @@
         "skipDefaultLibCheck": true,
         "baseUrl": ".",
         "paths": {
-            "@omt/api/data-access/core": ["libs/api/data-access/core/src/index.ts"],
-            "@omt/web-feature-home": ["libs/web/feature/home/src/index.ts"],
+            "@omt/api/common": ["libs/api/@common/src/index.ts"],
+            "@omt/api/mobs": ["libs/api/mobs/src/index.ts"],
+            "@omt/api/users": ["libs/api/users/src/index.ts"],
             "@omt/web/feature/create-mob": ["libs/web/feature/create-mob/src/index.ts"]
         }
     },
