--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
         "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
         "start": "nx run-many --parallel --target=serve --projects=web,api --configuration=dev",
         "build": "nx build",
-        "test": "nx test"
+        "test": "nx test",
+        "typeorm": "ts-node -P ./apps/api/tsconfig.json -O '{\"module\": \"commonjs\", \"experimentalDecorators\": true}' -r tsconfig-paths/register ./node_modules/typeorm/cli.js -f ./apps/api/ormconfig.cli.ts",
+        "db:migration:generate": "npm run typeorm -- migration:generate -n",
+        "db:migration:run": "npm run typeorm -- migration:run"
+    },
+    "scripty": {
+        "path": "tools/scripts"
     },
     "private": true,
     "dependencies": {
@@ -69,6 +75,7 @@
         "jest-preset-angular": "11.0.0",
         "prettier": "^2.5.1",
         "ts-jest": "27.0.5",
+        "ts-node": "^10.4.0",
         "typescript": "~4.5.2"
     }
 }
