--- a/angular.json
+++ b/angular.json
@@ -6,6 +6,7 @@
         "api-mobs": "libs/api/mobs",
         "api-users": "libs/api/users",
         "web": "apps/web",
-        "web-feature-create-mob": "libs/web/feature/create-mob"
+        "web-feature-create-mob": "libs/web/feature/create-mob",
+        "web-home": "libs/web/home"
     }
 }
