--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,8 +14,12 @@
                         "allow": [],
                         "depConstraints": [
                             {
-                                "sourceTag": "*",
-                                "onlyDependOnLibsWithTags": ["*"]
+                                "sourceTag": "scope:api",
+                                "onlyDependOnLibsWithTags": ["scope:api", "scope:shared"]
+                            },
+                            {
+                                "sourceTag": "scope:web",
+                                "onlyDependOnLibsWithTags": ["scope:web", "scope:shared"]
                             }
                         ]
                     }
