Add Cosmic Theme

--- a/apps/web/project.json
+++ b/apps/web/project.json
@@ -18,6 +18,7 @@
                 "styles": [
                     "node_modules/bootstrap/dist/css/bootstrap.css",
                     "./node_modules/@nebular/theme/styles/prebuilt/default.css",
+                    "./node_modules/@nebular/theme/styles/prebuilt/cosmic.css",
                     "apps/web/src/styles.scss"
                 ],
                 "scripts": []
