--- a/libs/api/@common/project.json
+++ b/libs/api/@common/project.json
@@ -1,20 +1,20 @@
 {
-    "root": "libs/api/common",
-    "sourceRoot": "libs/api/common/src",
+    "root": "libs/api/@common",
+    "sourceRoot": "libs/api/@common/src",
     "projectType": "library",
     "targets": {
         "lint": {
             "executor": "@nrwl/linter:eslint",
             "outputs": ["{options.outputFile}"],
             "options": {
-                "lintFilePatterns": ["libs/api/common/**/*.ts"]
+                "lintFilePatterns": ["libs/api/@common/**/*.ts"]
             }
         },
         "test": {
             "executor": "@nrwl/jest:jest",
-            "outputs": ["coverage/libs/api/common"],
+            "outputs": ["coverage/libs/api/@common"],
             "options": {
-                "jestConfig": "libs/api/common/jest.config.js",
+                "jestConfig": "libs/api/@common/jest.config.js",
                 "passWithNoTests": true
             }
         }
