--- a/package.json
+++ b/package.json
@@ -6,18 +6,16 @@
         "ng": "nx",
         "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
         "start": "nx run-many --parallel --target=serve --projects=web,api --configuration=dev",
+        "start:azure": "npm run build:api && func host start",
         "build": "nx build",
         "build:api": "nx build api",
         "test": "nx test",
-        "lint": "nx lint",
+        "lint": "nx affected:lint",
         "lint:quiet": "nx lint --quiet",
+        "prepare": "husky install",
         "typeorm": "ts-node -P ./apps/api/tsconfig.json -O \"{\\\"module\\\": \\\"commonjs\\\"}\" -r tsconfig-paths/register ./node_modules/typeorm/cli.js -f ./apps/api/ormconfig.cli.ts",
         "db:migration:generate": "npm run typeorm -- migration:generate -n",
-        "db:migration:run": "npm run typeorm -- migration:run",
-        "start:azure": "npm run build:api && func host start"
-    },
-    "scripty": {
-        "path": "tools/scripts"
+        "db:migration:run": "npm run typeorm -- migration:run"
     },
     "private": true,
     "dependencies": {
@@ -77,6 +75,7 @@
         "eslint-config-prettier": "^8.1.0",
         "eslint-plugin-cypress": "^2.10.3",
         "eslint-plugin-prettier": "^4.0.0",
+        "husky": "^7.0.4",
         "jest": "27.2.3",
         "jest-preset-angular": "11.0.0",
         "prettier": "^2.5.1",
