NPM Script Optimizations/Refactors

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
         "start:azure": "npm run build:api && func host start",
         "build": "nx build",
         "build:api": "nx build api",
-        "test": "nx test",
+        "test": "nx affected:test --parallel --max-parallel=2",
         "lint": "nx affected:lint",
-        "lint:quiet": "nx lint --quiet",
+        "lint:quiet": "nx affected:lint --quiet",
         "prepare": "husky install",
         "typeorm": "ts-node -P ./apps/api/tsconfig.json -O \"{\\\"module\\\": \\\"commonjs\\\"}\" -r tsconfig-paths/register ./node_modules/typeorm/cli.js -f ./apps/api/ormconfig.cli.ts",
         "db:migration:generate": "npm run typeorm -- migration:generate -n",
