Combine Into Single App

--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
         "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
         "start": "nx run-many --parallel --target=serve --projects=web,api --configuration=dev",
         "start:azure": "npm run build:api && func host start",
+        "start:api": "nx serve api",
         "storybook": "nx storybook web-shared-storybook",
-        "build": "nx build",
-        "build:api": "nx build api",
+        "build:web": "nx build web --prod",
+        "build:api": "nx build api --prod",
         "test": "nx affected --target=test --parallel --max-parallel=2",
         "lint": "nx affected:lint",
         "lint:quiet": "nx affected:lint --quiet",
@@ -36,6 +37,7 @@
         "@nestjs/common": "^8.0.0",
         "@nestjs/core": "^8.0.0",
         "@nestjs/platform-express": "^8.0.0",
+        "@nestjs/serve-static": "^2.2.2",
         "@nestjs/typeorm": "^8.0.3",
         "@nrwl/angular": "13.7.1",
         "bootstrap": "^5.1.3",
