--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,9 @@ jobs:
 
     - name: NPM CI
       run: npm ci
+    
     - name: NPM Build
-      run: npm run build --if-present
+      run: npm run build
+
     - name: NPM Test
+      run: npm test
