--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,14 +18,11 @@ jobs:
         node-version: '16.x'
         cache: 'npm'
 
-    - name: NPM CI
+    - name: Install Dependencies
       run: npm ci
     
-    - name: NPM Build
+    - name: Build
       run: npm run build
-
-    - name: NPM Test
-      run: npm test
 
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v2
