--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
           echo "HEAD: ${{ env.NX_HEAD }}"
       - uses: actions/setup-node@v2
         with:
-          node-version: '16.x'
+          node-version: '14.10.0'
           cache: 'npm'
           registry-url: https://registry.npmjs.org/
 
