--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,5 +24,6 @@
         "html": ["html"],
         "css": [],
         "js": []
-    }
+    },
+    "appService.showBuildDuringDeployPrompt": false
 }
