--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,11 +12,25 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Set up Node.js version
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14.x'
+        cache: 'npm'
+
+    - name: Install Dependencies
+      run: npm ci
+    
+    - name: Build
+      run: | 
+        npm run build:api
+        npm run build:web
+
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v2
       with:
         name: node-app
-        path: .
+        path: ./dist/apps
 
   deploy:
     runs-on: ubuntu-latest
